# sql-agent

./: .env.example  .gitignore  README.md  SAMPLES.md  cli.py  config.yaml  conftest.py  db.py  main.py  orchestrator.py  pyproject.toml  requirements.txt  text2sql.py  ui.py
conf/: config.yaml
extra/: accountant.txt
scripts/: benchmark.ipynb  evaluation.ipynb  gen_data.ipynb  mschema2json.ipynb  nothing.ipynb
shared/src/shared/: logger.py
src/sql_qa/: __init__.py  chat.py  cli.py  config.py  config.yaml  runner.py  schema.py  state.py  ui.py
src/sql_qa/agent/: base.py  domain.py  orchestrator.py  sql.py
src/sql_qa/llm/: adapter.py  base.py  generation.py  strategy.py  tool.py  type.py  util.py
src/sql_qa/metrics/: evaluation.py  filter.py  process_sql.py  util.py
src/sql_qa/prompt/: constant.py  engine.py  template.py
src/sql_qa/schema/: graph.py  store.py  tool.py
src/sql_qa/serving/: app.py  bot.py  sql.py  text2sql.py
src/sql_qa/text2sql/: sql_agent.py
src/sql_qa/utils/: constant.py  invocation.py  misc.py
tests/: test_db.py  test_metrics.py  test_orchestrator.py
tests/sql_qa/: test_llm.py
tests/sql_qa/metrics/: test_evaluation.py
