[project]
name = "sql-qa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "cryptography>=44.0.3",
    "fastapi>=0.115.12",
    "hydra-core>=1.3.2",
    "langchain-community>=0.3.22",
    "langchain-google-genai>=2.1.4",
    "langchain[mistralai,openai]>=0.3.24",
    "langgraph>=0.3.34",
    "langgraph-checkpoint-postgres>=2.0.21",
    "psycopg[binary]>=3.2.7",
    "psycopg-pool>=3.2.6",
    "pymysql>=1.1.1",
    "pytest>=8.3.5",
    "shared",
    "streamlit>=1.45.0",
    "uvicorn[standard]>=0.34.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sql_qa"]

[tool.uv.sources]
shared = { path = "packages/shared", editable = true }

