[project]
name = "sql-qa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "cryptography>=44.0.3",
    "fastapi>=0.115.12",
    "langchain-community>=0.3.22",
    "langchain-google-genai>=2.1.4",
    "langchain[mistralai,openai]>=0.3.24",
    "langgraph>=0.3.34",
    "langgraph-checkpoint-postgres>=2.0.21",
    "psycopg[binary]>=3.2.7",
    "psycopg-pool>=3.2.6",
    "pymysql>=1.1.1",
    "pytest>=8.3.5",
    "shared",
    "streamlit>=1.45.0",
    "uvicorn[standard]>=0.34.2",
    "ipython>=9.2.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "langchain-huggingface>=0.2.0",
    "huggingface-hub[hf-xet]>=0.30.2",
    "langgraph-swarm>=0.0.11",
    "langgraph-cli[inmem]>=0.2.10",
    "pydantic-settings>=2.9.1",
    "pyyaml>=6.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sql_qa"]

[tool.uv.sources]
shared = { path = "packages/shared", editable = true }

[tool.uv.workspace]
members = [
    "packages/preprocess",
]

